# bevy-inspector-egui

crates/bevy-inspector-egui/: Cargo.toml
crates/bevy-inspector-egui-derive/: Cargo.toml
crates/bevy-inspector-egui/src/: utils.rs
crates/bevy-inspector-egui/src/bevy_inspector/: mod.rs
crates/bevy-inspector-egui/src/reflect_inspector/: mod.rs
