[package]
name = "bevy-inspector-egui-derive"
version = "0.32.0"
edition = "2021"
repository = "https://github.com/jakobhellermann/bevy-inspector-egui/"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Implementation detail of the `bevy-inspector-egui` crate"
documentation = "https://docs.rs/bevy-inspector-egui-derive"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]

[dev-dependencies.bevy_ecs]
git = "https://github.com/bevyengine/bevy"
rev = "01eff3ea937535bc7384ff361029129475d98263"
default-features = false

[dev-dependencies.bevy_math]
git = "https://github.com/bevyengine/bevy"
rev = "01eff3ea937535bc7384ff361029129475d98263"
default-features = false

[dev-dependencies.bevy_reflect]
git = "https://github.com/bevyengine/bevy"
rev = "01eff3ea937535bc7384ff361029129475d98263"
default-features = false

[dev-dependencies.bevy-inspector-egui]
path = "../bevy-inspector-egui"
